@@ -56,8 +56,8 @@ enum
     RadioPage_Selection,
     RadioPage_Label,
     RadioPage_LabelBtn,
-    RadioPage_Enable2nd,
-    RadioPage_Show2nd,
+    RadioPage_EnableItem,
+    RadioPage_ShowItem,
     RadioPage_Radio
 };
 
@@ -72,6 +72,9 @@ enum
 // default values for the number of radiobox items
 static const unsigned int DEFAULT_NUM_ENTRIES = 12;
 static const unsigned int DEFAULT_MAJOR_DIM = 3;
+
+// this item is enabled/disabled shown/hidden by the test checkboxes
+static const int TEST_BUTTON = 1;
 
 // ----------------------------------------------------------------------------
 // RadioWidgetsPage
@@ -96,9 +99,14 @@ protected:
     void OnButtonSelection(wxCommandEvent& event);
     void OnButtonSetLabel(wxCommandEvent& event);
 
+    void OnEnableItem(wxCommandEvent& event);
+    void OnShowItem(wxCommandEvent& event);
+
     void OnUpdateUIReset(wxUpdateUIEvent& event);
     void OnUpdateUIUpdate(wxUpdateUIEvent& event);
     void OnUpdateUISelection(wxUpdateUIEvent& event);
+    void OnUpdateUIEnableItem(wxUpdateUIEvent& event);
+    void OnUpdateUIShowItem(wxUpdateUIEvent& event);
 
     // reset the wxRadioBox parameters
     void Reset();
@@ -111,8 +119,8 @@ protected:
 
     // the check/radio boxes for styles
     wxCheckBox *m_chkVert;
-    wxCheckBox *m_2ndEnabled;
-    wxCheckBox *m_2ndShown;
+    wxCheckBox *m_chkEnableItem;
+    wxCheckBox *m_chkShowItem;
     wxRadioBox *m_radioDir;
 
     // the gauge itself and the sizer it is in
@@ -150,6 +158,12 @@ BEGIN_EVENT_TABLE(RadioWidgetsPage, WidgetsPage)
 
     EVT_RADIOBOX(RadioPage_Radio, RadioWidgetsPage::OnRadioBox)
 
+    EVT_CHECKBOX(RadioPage_EnableItem, RadioWidgetsPage::OnEnableItem)
+    EVT_CHECKBOX(RadioPage_ShowItem, RadioWidgetsPage::OnShowItem)
+
+    EVT_UPDATE_UI(RadioPage_EnableItem, RadioWidgetsPage::OnUpdateUIEnableItem)
+    EVT_UPDATE_UI(RadioPage_ShowItem, RadioWidgetsPage::OnUpdateUIShowItem)
+
     EVT_CHECKBOX(wxID_ANY, RadioWidgetsPage::OnCheckOrRadioBox)
     EVT_RADIOBOX(wxID_ANY, RadioWidgetsPage::OnCheckOrRadioBox)
 END_EVENT_TABLE()
@@ -168,8 +182,8 @@ RadioWidgetsPage::RadioWidgetsPage(wxBookCtrlBase *book,
 
     // init everything
     m_chkVert = (wxCheckBox *)NULL;
-    m_2ndEnabled = (wxCheckBox *)NULL;
-    m_2ndShown = (wxCheckBox *)NULL;
+    m_chkEnableItem = (wxCheckBox *)NULL;
+    m_chkShowItem = (wxCheckBox *)NULL;
 
     m_textNumBtns =
     m_textLabelBtns =
@@ -253,8 +267,12 @@ RadioWidgetsPage::RadioWidgetsPage(wxBookCtrlBase *book,
                                             &m_textLabelBtns);
     sizerMiddle->Add(sizerRow, 0, wxGROW | wxALL, 5);
 
-    m_2ndEnabled = CreateCheckBoxAndAddToSizer(sizerMiddle, _T("2nd item enabled"));
-    m_2ndShown = CreateCheckBoxAndAddToSizer(sizerMiddle, _T("2nd item shown"));
+    m_chkEnableItem = CreateCheckBoxAndAddToSizer(sizerMiddle,
+                                                  _T("Disable &2nd item"),
+                                                  RadioPage_EnableItem);
+    m_chkShowItem = CreateCheckBoxAndAddToSizer(sizerMiddle,
+                                                _T("Hide 2nd &item"),
+                                                RadioPage_ShowItem);
 
     // right pane
     wxSizer *sizerRight = new wxBoxSizer(wxHORIZONTAL);
@@ -287,8 +305,8 @@ void RadioWidgetsPage::Reset()
     m_textLabelBtns->SetValue(_T("item"));
 
     m_chkVert->SetValue(false);
-    m_2ndEnabled->SetValue(true);
-    m_2ndShown->SetValue(true);
+    m_chkEnableItem->SetValue(true);
+    m_chkShowItem->SetValue(true);
     m_radioDir->SetSelection(RadioDir_Default);
 }
 
@@ -375,8 +393,8 @@ void RadioWidgetsPage::CreateRadio()
     m_sizerRadio->Add(m_radio, 1, wxGROW);
     m_sizerRadio->Layout();
 
-    m_radio->Enable( 1 , m_2ndEnabled->GetValue() );
-    m_radio->Show( 1 , m_2ndShown->GetValue() );
+    m_chkEnableItem->SetValue(true);
+    m_chkEnableItem->SetValue(true);
 }
 
 // ----------------------------------------------------------------------------
@@ -433,6 +451,16 @@ void RadioWidgetsPage::OnButtonSelection(wxCommandEvent& WXUNUSED(event))
     }
 }
 
+void RadioWidgetsPage::OnEnableItem(wxCommandEvent& event)
+{
+    m_radio->Enable(TEST_BUTTON, event.IsChecked());
+}
+
+void RadioWidgetsPage::OnShowItem(wxCommandEvent& event)
+{
+    m_radio->Show(TEST_BUTTON, event.IsChecked());
+}
+
 void RadioWidgetsPage::OnUpdateUIUpdate(wxUpdateUIEvent& event)
 {
     unsigned long n;
@@ -469,6 +497,18 @@ void RadioWidgetsPage::OnUpdateUIReset(wxUpdateUIEvent& event)
     }
 
     event.Enable(enable);
+}
+
+void RadioWidgetsPage::OnUpdateUIEnableItem(wxUpdateUIEvent& event)
+{
+    event.SetText(m_radio->IsItemEnabled(TEST_BUTTON) ? _T("Disable &2nd item")
+                                                      : _T("Enable &2nd item"));
+}
+
+void RadioWidgetsPage::OnUpdateUIShowItem(wxUpdateUIEvent& event)
+{
+    event.SetText(m_radio->IsItemShown(TEST_BUTTON) ? _T("Hide 2nd &item")
+                                                    : _T("Show 2nd &item"));
 }
 
 #endif // wxUSE_RADIOBOX
